--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^0.24.0",
     "bootstrap": "5.1.1",
     "bootstrap-icons": "^1.7.1",
+    "dotenv": "^10.0.0",
+    "jsonwebtoken": "^8.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-rc.0",
     "react-dom": "^17.0.2",
